syntax.output
Nonterminals useless in grammar

    attribute_value
    exp


Terminals unused in grammar

    "textview_end"
    "imageview_end"
    "button_end"
    "radiobutton_end"
    "progressbar_end"
    "random_word"
    "negative number"


Rules useless in grammar

   93 attribute_value: "string"
   94                | "positive number"

   95 exp: "equal" "symbol" attribute_value "symbol"


State 18 conflicts: 8 shift/reduce
State 67 conflicts: 1 shift/reduce
State 77 conflicts: 8 shift/reduce


Grammar

    0 $accept: root $end

    1 root: linear_layout
    2     | "relative_layout" relative_layout_attributes "t_big" relative_element_list linear_layout "relative_layout_end"

    3 linear_layout: "linear_layout" linear_layout_attributes "t_big" linear_element_list relative_layout "linear_layout_end"
    4              | "linear_layout" linear_layout_attributes "t_big" linear_element_list "linear_layout_end"

    5 relative_layout: "relative_layout" relative_layout_attributes "t_big" relative_element_list "relative_layout_end"

    6 attribute: "an_width" "equal" layout_value "an_height" "equal" layout_value

    7 layout_value: "match_parent"
    8             | "wrap_content"
    9             | th_number

   10 th_number: "symbol" "positive number" "symbol"

   11 linear_layout_attributes: attribute linear_layout_optional_attributes
   12                         | attribute

   13 relative_layout_attributes: attribute relative_layout_optional_attributes
   14                           | attribute

   15 linear_layout_optional_attributes: "an_id" "equal" "symbol" "string" "symbol"
   16                                  | "an_orientation" "equal" "symbol" "string" "symbol"
   17                                  | "an_id" "equal" "symbol" "string" "symbol" "an_orientation" "equal" "symbol" "string" "symbol"
   18                                  | "an_orientation" "equal" "symbol" "string" "symbol" "an_id" "equal" "symbol" "string" "symbol"

   19 relative_layout_optional_attributes: "an_id" "equal" "symbol" "string" "symbol"

   20 element: text_view
   21        | image_view
   22        | button
   23        | radio_group
   24        | progress_bar
   25        | radio_button
   26        | relative_layout
   27        | linear_layout

   28 relative_element_list: relative_element_list element
   29                      | element
   30                      | ε

   31 linear_element_list: element
   32                    | linear_element_list element

   33 text_view: "textview" text_view_attributes "end_symbol"

   34 text_view_attributes: attribute text_view_standart_attributes text_view_optional_attributes
   35                     | attribute text_view_optional_attributes text_view_standart_attributes
   36                     | attribute text_view_standart_attributes

   37 text_view_standart_attributes: "an_text" "equal" "symbol" "string" "symbol"

   38 text_view_optional_attributes: "an_id" "equal" "symbol" "string" "symbol"
   39                              | "an_text_color" "equal" "symbol" "string" "symbol"
   40                              | "an_id" "equal" "symbol" "string" "symbol" "an_text_color" "equal" "symbol" "string" "symbol"
   41                              | "an_text_color" "equal" "symbol" "string" "symbol" "an_id" "equal" "symbol" "string" "symbol"

   42 image_view: "imageview" image_view_attributes "end_symbol"

   43 image_view_attributes: attribute image_view_standart_attributes image_view_optional_attributes
   44                      | attribute image_view_standart_attributes

   45 image_view_standart_attributes: "an_src" "equal" "symbol" "string" "symbol"

   46 image_view_optional_attributes: "an_id" "equal" "symbol" "string" "symbol"
   47                               | "an_padding" "equal" "symbol" "positive number" "symbol"
   48                               | "an_id" "equal" "symbol" "string" "symbol" "an_padding" "equal" "symbol" "positive number" "symbol"
   49                               | "an_padding" "equal" "symbol" "positive number" "symbol" "an_id" "equal" "symbol" "string" "symbol"

   50 button: "button" button_attributes "end_symbol"

   51 button_attributes: attribute button_standart_attributes button_optional_attributes
   52                  | attribute button_standart_attributes

   53 button_standart_attributes: "an_text" "equal" "symbol" "string" "symbol"

   54 button_optional_attributes: "an_id" "equal" "symbol" "string" "symbol"
   55                           | "an_padding" "equal" "symbol" "positive number" "symbol"
   56                           | "an_id" "equal" "symbol" "string" "symbol" "an_padding" "equal" "symbol" "positive number" "symbol"
   57                           | "an_padding" "equal" "symbol" "positive number" "symbol" "an_id" "equal" "symbol" "string" "symbol"

   58 radio_group: "radiogroup" radio_group_attributes "t_big" radio_buttons "end_symbol"
   59            | "radiogroup" radio_group_attributes "t_big" radio_buttons "radiogroup_end"

   60 radio_group_attributes: attribute radio_group_standart_attributes radio_group_optional_attributes
   61                       | attribute radio_group_standart_attributes

   62 $@1: ε

   63 radio_group_standart_attributes: "t_an_rb" "equal" "symbol" "positive number" $@1 "symbol"

   64 radio_group_optional_attributes: "an_id" "equal" "symbol" "string" "symbol"

   65 $@2: ε

   66 radio_group_optional_attributes: "an_checked_button" "equal" "symbol" "string" $@2 "symbol"

   67 $@3: ε

   68 radio_group_optional_attributes: "an_id" "equal" "symbol" "string" "symbol" "an_checked_button" "equal" "symbol" "string" $@3 "symbol"

   69 radio_buttons: "radiobutton" radio_button
   70              | "radiobutton" radio_button radio_buttons

   71 radio_button: radio_button_attributes "end_symbol"

   72 radio_button_attributes: attribute radio_button_standart_attributes radio_button_optional_attributes
   73                        | attribute radio_button_optional_attributes radio_button_standart_attributes
   74                        | attribute radio_button_standart_attributes

   75 radio_button_standart_attributes: "an_text" "equal" "symbol" "string" "symbol"

   76 $@4: ε

   77 radio_button_optional_attributes: "an_id" "equal" "symbol" "string" $@4 "symbol"

   78 progress_bar: "progressbar" progress_bar_attributes "end_symbol"

   79 progress_bar_attributes: attribute progress_bar_optional_attributes
   80                        | attribute

   81 $@5: ε

   82 $@6: ε

   83 progress_bar_optional_attributes: "an_id" "equal" "symbol" "string" "symbol" "an_max" "equal" "symbol" "positive number" $@5 "symbol" "an_progress" "equal" "symbol" "positive number" $@6 "symbol"

   84 $@7: ε

   85 $@8: ε

   86 progress_bar_optional_attributes: "an_max" "equal" "symbol" "positive number" $@7 "symbol" "an_progress" "equal" "symbol" "positive number" $@8 "symbol"

   87 $@9: ε

   88 $@10: ε

   89 progress_bar_optional_attributes: "an_progress" "equal" "symbol" "positive number" $@9 "symbol" "an_max" "equal" "symbol" "positive number" $@10 "symbol"

   90 $@11: ε

   91 $@12: ε

   92 progress_bar_optional_attributes: "an_id" "equal" "symbol" "string" "symbol" "an_progress" "equal" "symbol" "positive number" $@11 "symbol" "an_max" "equal" "symbol" "positive number" $@12 "symbol"


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    "linear_layout" (258) 3 4
    "linear_layout_end" (259) 3 4
    "relative_layout" (260) 2 5
    "relative_layout_end" (261) 2 5
    "textview" (262) 33
    "textview_end" (263)
    "imageview" (264) 42
    "imageview_end" (265)
    "button" (266) 50
    "button_end" (267)
    "radiobutton" (268) 69 70
    "radiobutton_end" (269)
    "radiogroup" (270) 58 59
    "radiogroup_end" (271) 59
    "progressbar" (272) 78
    "progressbar_end" (273)
    "an_width" (274) 6
    "an_height" (275) 6
    "an_orientation" (276) 16 17 18
    "an_id" (277) 15 17 18 19 38 40 41 46 48 49 54 56 57 64 68 77 83 92
    "an_text" (278) 37 53 75
    "an_src" (279) 45
    "an_padding" (280) 47 48 49 55 56 57
    "an_checked_button" (281) 66 68
    "an_text_color" (282) 39 40 41
    "an_max" (283) 83 86 89 92
    "an_progress" (284) 83 86 89 92
    "equal" (285) 6 15 16 17 18 19 37 38 39 40 41 45 46 47 48 49 53 54 55 56 57 63 64 66 68 75 77 83 86 89 92
    "end_symbol" (286) 33 42 50 58 71 78
    "random_word" (287)
    "positive number" <numval> (288) 10 47 48 49 55 56 57 63 83 86 89 92
    "symbol" (289) 10 15 16 17 18 19 37 38 39 40 41 45 46 47 48 49 53 54 55 56 57 63 64 66 68 75 77 83 86 89 92
    "string" (290) 15 16 17 18 19 37 38 39 40 41 45 46 48 49 53 54 56 57 64 66 68 75 77 83 92
    "t_big" (291) 2 3 4 5 58 59
    "negative number" (292)
    "match_parent" <strval> (293) 7
    "wrap_content" <strval> (294) 8
    "t_an_rb" (295) 63


Nonterminals, with rules where they appear

    $accept (41)
        on left: 0
    root (42)
        on left: 1 2
        on right: 0
    linear_layout (43)
        on left: 3 4
        on right: 1 2 27
    relative_layout (44)
        on left: 5
        on right: 3 26
    attribute (45)
        on left: 6
        on right: 11 12 13 14 34 35 36 43 44 51 52 60 61 72 73 74 79 80
    layout_value (46)
        on left: 7 8 9
        on right: 6
    th_number (47)
        on left: 10
        on right: 9
    linear_layout_attributes (48)
        on left: 11 12
        on right: 3 4
    relative_layout_attributes (49)
        on left: 13 14
        on right: 2 5
    linear_layout_optional_attributes (50)
        on left: 15 16 17 18
        on right: 11
    relative_layout_optional_attributes (51)
        on left: 19
        on right: 13
    element (52)
        on left: 20 21 22 23 24 25 26 27
        on right: 28 29 31 32
    relative_element_list (53)
        on left: 28 29 30
        on right: 2 5 28
    linear_element_list (54)
        on left: 31 32
        on right: 3 4 32
    text_view (55)
        on left: 33
        on right: 20
    text_view_attributes (56)
        on left: 34 35 36
        on right: 33
    text_view_standart_attributes (57)
        on left: 37
        on right: 34 35 36
    text_view_optional_attributes (58)
        on left: 38 39 40 41
        on right: 34 35
    image_view (59)
        on left: 42
        on right: 21
    image_view_attributes (60)
        on left: 43 44
        on right: 42
    image_view_standart_attributes (61)
        on left: 45
        on right: 43 44
    image_view_optional_attributes (62)
        on left: 46 47 48 49
        on right: 43
    button (63)
        on left: 50
        on right: 22
    button_attributes (64)
        on left: 51 52
        on right: 50
    button_standart_attributes (65)
        on left: 53
        on right: 51 52
    button_optional_attributes (66)
        on left: 54 55 56 57
        on right: 51
    radio_group (67)
        on left: 58 59
        on right: 23
    radio_group_attributes (68)
        on left: 60 61
        on right: 58 59
    radio_group_standart_attributes (69)
        on left: 63
        on right: 60 61
    $@1 (70)
        on left: 62
        on right: 63
    radio_group_optional_attributes (71)
        on left: 64 66 68
        on right: 60
    $@2 (72)
        on left: 65
        on right: 66
    $@3 (73)
        on left: 67
        on right: 68
    radio_buttons (74)
        on left: 69 70
        on right: 58 59 70
    radio_button (75)
        on left: 71
        on right: 25 69 70
    radio_button_attributes (76)
        on left: 72 73 74
        on right: 71
    radio_button_standart_attributes (77)
        on left: 75
        on right: 72 73 74
    radio_button_optional_attributes (78)
        on left: 77
        on right: 72 73
    $@4 (79)
        on left: 76
        on right: 77
    progress_bar (80)
        on left: 78
        on right: 24
    progress_bar_attributes (81)
        on left: 79 80
        on right: 78
    progress_bar_optional_attributes (82)
        on left: 83 86 89 92
        on right: 79
    $@5 (83)
        on left: 81
        on right: 83
    $@6 (84)
        on left: 82
        on right: 83
    $@7 (85)
        on left: 84
        on right: 86
    $@8 (86)
        on left: 85
        on right: 86
    $@9 (87)
        on left: 87
        on right: 89
    $@10 (88)
        on left: 88
        on right: 89
    $@11 (89)
        on left: 90
        on right: 92
    $@12 (90)
        on left: 91
        on right: 92


State 0

    0 $accept: • root $end

    "linear_layout"    shift, and go to state 1
    "relative_layout"  shift, and go to state 2

    root           go to state 3
    linear_layout  go to state 4


State 1

    3 linear_layout: "linear_layout" • linear_layout_attributes "t_big" linear_element_list relative_layout "linear_layout_end"
    4              | "linear_layout" • linear_layout_attributes "t_big" linear_element_list "linear_layout_end"

    "an_width"  shift, and go to state 5

    attribute                 go to state 6
    linear_layout_attributes  go to state 7


State 2

    2 root: "relative_layout" • relative_layout_attributes "t_big" relative_element_list linear_layout "relative_layout_end"

    "an_width"  shift, and go to state 5

    attribute                   go to state 8
    relative_layout_attributes  go to state 9


State 3

    0 $accept: root • $end

    $end  shift, and go to state 10


State 4

    1 root: linear_layout •

    $default  reduce using rule 1 (root)


State 5

    6 attribute: "an_width" • "equal" layout_value "an_height" "equal" layout_value

    "equal"  shift, and go to state 11


State 6

   11 linear_layout_attributes: attribute • linear_layout_optional_attributes
   12                         | attribute •

    "an_orientation"  shift, and go to state 12
    "an_id"           shift, and go to state 13

    $default  reduce using rule 12 (linear_layout_attributes)

    linear_layout_optional_attributes  go to state 14


State 7

    3 linear_layout: "linear_layout" linear_layout_attributes • "t_big" linear_element_list relative_layout "linear_layout_end"
    4              | "linear_layout" linear_layout_attributes • "t_big" linear_element_list "linear_layout_end"

    "t_big"  shift, and go to state 15


State 8

   13 relative_layout_attributes: attribute • relative_layout_optional_attributes
   14                           | attribute •

    "an_id"  shift, and go to state 16

    $default  reduce using rule 14 (relative_layout_attributes)

    relative_layout_optional_attributes  go to state 17


State 9

    2 root: "relative_layout" relative_layout_attributes • "t_big" relative_element_list linear_layout "relative_layout_end"

    "t_big"  shift, and go to state 18


State 10

    0 $accept: root $end •

    $default  accept


State 11

    6 attribute: "an_width" "equal" • layout_value "an_height" "equal" layout_value

    "symbol"        shift, and go to state 19
    "match_parent"  shift, and go to state 20
    "wrap_content"  shift, and go to state 21

    layout_value  go to state 22
    th_number     go to state 23


State 12

   16 linear_layout_optional_attributes: "an_orientation" • "equal" "symbol" "string" "symbol"
   18                                  | "an_orientation" • "equal" "symbol" "string" "symbol" "an_id" "equal" "symbol" "string" "symbol"

    "equal"  shift, and go to state 24


State 13

   15 linear_layout_optional_attributes: "an_id" • "equal" "symbol" "string" "symbol"
   17                                  | "an_id" • "equal" "symbol" "string" "symbol" "an_orientation" "equal" "symbol" "string" "symbol"

    "equal"  shift, and go to state 25


State 14

   11 linear_layout_attributes: attribute linear_layout_optional_attributes •

    $default  reduce using rule 11 (linear_layout_attributes)


State 15

    3 linear_layout: "linear_layout" linear_layout_attributes "t_big" • linear_element_list relative_layout "linear_layout_end"
    4              | "linear_layout" linear_layout_attributes "t_big" • linear_element_list "linear_layout_end"

    "linear_layout"    shift, and go to state 1
    "relative_layout"  shift, and go to state 26
    "textview"         shift, and go to state 27
    "imageview"        shift, and go to state 28
    "button"           shift, and go to state 29
    "radiogroup"       shift, and go to state 30
    "progressbar"      shift, and go to state 31
    "an_width"         shift, and go to state 5

    linear_layout            go to state 32
    relative_layout          go to state 33
    attribute                go to state 34
    element                  go to state 35
    linear_element_list      go to state 36
    text_view                go to state 37
    image_view               go to state 38
    button                   go to state 39
    radio_group              go to state 40
    radio_button             go to state 41
    radio_button_attributes  go to state 42
    progress_bar             go to state 43


State 16

   19 relative_layout_optional_attributes: "an_id" • "equal" "symbol" "string" "symbol"

    "equal"  shift, and go to state 44


State 17

   13 relative_layout_attributes: attribute relative_layout_optional_attributes •

    $default  reduce using rule 13 (relative_layout_attributes)


State 18

    2 root: "relative_layout" relative_layout_attributes "t_big" • relative_element_list linear_layout "relative_layout_end"

    "linear_layout"    shift, and go to state 1
    "relative_layout"  shift, and go to state 26
    "textview"         shift, and go to state 27
    "imageview"        shift, and go to state 28
    "button"           shift, and go to state 29
    "radiogroup"       shift, and go to state 30
    "progressbar"      shift, and go to state 31
    "an_width"         shift, and go to state 5

    "linear_layout"    [reduce using rule 30 (relative_element_list)]
    "relative_layout"  [reduce using rule 30 (relative_element_list)]
    "textview"         [reduce using rule 30 (relative_element_list)]
    "imageview"        [reduce using rule 30 (relative_element_list)]
    "button"           [reduce using rule 30 (relative_element_list)]
    "radiogroup"       [reduce using rule 30 (relative_element_list)]
    "progressbar"      [reduce using rule 30 (relative_element_list)]
    "an_width"         [reduce using rule 30 (relative_element_list)]

    linear_layout            go to state 32
    relative_layout          go to state 33
    attribute                go to state 34
    element                  go to state 45
    relative_element_list    go to state 46
    text_view                go to state 37
    image_view               go to state 38
    button                   go to state 39
    radio_group              go to state 40
    radio_button             go to state 41
    radio_button_attributes  go to state 42
    progress_bar             go to state 43


State 19

   10 th_number: "symbol" • "positive number" "symbol"

    "positive number"  shift, and go to state 47


State 20

    7 layout_value: "match_parent" •

    $default  reduce using rule 7 (layout_value)


State 21

    8 layout_value: "wrap_content" •

    $default  reduce using rule 8 (layout_value)


State 22

    6 attribute: "an_width" "equal" layout_value • "an_height" "equal" layout_value

    "an_height"  shift, and go to state 48


State 23

    9 layout_value: th_number •

    $default  reduce using rule 9 (layout_value)


State 24

   16 linear_layout_optional_attributes: "an_orientation" "equal" • "symbol" "string" "symbol"
   18                                  | "an_orientation" "equal" • "symbol" "string" "symbol" "an_id" "equal" "symbol" "string" "symbol"

    "symbol"  shift, and go to state 49


State 25

   15 linear_layout_optional_attributes: "an_id" "equal" • "symbol" "string" "symbol"
   17                                  | "an_id" "equal" • "symbol" "string" "symbol" "an_orientation" "equal" "symbol" "string" "symbol"

    "symbol"  shift, and go to state 50


State 26

    5 relative_layout: "relative_layout" • relative_layout_attributes "t_big" relative_element_list "relative_layout_end"

    "an_width"  shift, and go to state 5

    attribute                   go to state 8
    relative_layout_attributes  go to state 51


State 27

   33 text_view: "textview" • text_view_attributes "end_symbol"

    "an_width"  shift, and go to state 5

    attribute             go to state 52
    text_view_attributes  go to state 53


State 28

   42 image_view: "imageview" • image_view_attributes "end_symbol"

    "an_width"  shift, and go to state 5

    attribute              go to state 54
    image_view_attributes  go to state 55


State 29

   50 button: "button" • button_attributes "end_symbol"

    "an_width"  shift, and go to state 5

    attribute          go to state 56
    button_attributes  go to state 57


State 30

   58 radio_group: "radiogroup" • radio_group_attributes "t_big" radio_buttons "end_symbol"
   59            | "radiogroup" • radio_group_attributes "t_big" radio_buttons "radiogroup_end"

    "an_width"  shift, and go to state 5

    attribute               go to state 58
    radio_group_attributes  go to state 59


State 31

   78 progress_bar: "progressbar" • progress_bar_attributes "end_symbol"

    "an_width"  shift, and go to state 5

    attribute                go to state 60
    progress_bar_attributes  go to state 61


State 32

   27 element: linear_layout •

    $default  reduce using rule 27 (element)


State 33

   26 element: relative_layout •

    $default  reduce using rule 26 (element)


State 34

   72 radio_button_attributes: attribute • radio_button_standart_attributes radio_button_optional_attributes
   73                        | attribute • radio_button_optional_attributes radio_button_standart_attributes
   74                        | attribute • radio_button_standart_attributes

    "an_id"    shift, and go to state 62
    "an_text"  shift, and go to state 63

    radio_button_standart_attributes  go to state 64
    radio_button_optional_attributes  go to state 65


State 35

   31 linear_element_list: element •

    $default  reduce using rule 31 (linear_element_list)


State 36

    3 linear_layout: "linear_layout" linear_layout_attributes "t_big" linear_element_list • relative_layout "linear_layout_end"
    4              | "linear_layout" linear_layout_attributes "t_big" linear_element_list • "linear_layout_end"
   32 linear_element_list: linear_element_list • element

    "linear_layout"      shift, and go to state 1
    "linear_layout_end"  shift, and go to state 66
    "relative_layout"    shift, and go to state 26
    "textview"           shift, and go to state 27
    "imageview"          shift, and go to state 28
    "button"             shift, and go to state 29
    "radiogroup"         shift, and go to state 30
    "progressbar"        shift, and go to state 31
    "an_width"           shift, and go to state 5

    linear_layout            go to state 32
    relative_layout          go to state 67
    attribute                go to state 34
    element                  go to state 68
    text_view                go to state 37
    image_view               go to state 38
    button                   go to state 39
    radio_group              go to state 40
    radio_button             go to state 41
    radio_button_attributes  go to state 42
    progress_bar             go to state 43


State 37

   20 element: text_view •

    $default  reduce using rule 20 (element)


State 38

   21 element: image_view •

    $default  reduce using rule 21 (element)


State 39

   22 element: button •

    $default  reduce using rule 22 (element)


State 40

   23 element: radio_group •

    $default  reduce using rule 23 (element)


State 41

   25 element: radio_button •

    $default  reduce using rule 25 (element)


State 42

   71 radio_button: radio_button_attributes • "end_symbol"

    "end_symbol"  shift, and go to state 69


State 43

   24 element: progress_bar •

    $default  reduce using rule 24 (element)


State 44

   19 relative_layout_optional_attributes: "an_id" "equal" • "symbol" "string" "symbol"

    "symbol"  shift, and go to state 70


State 45

   29 relative_element_list: element •

    $default  reduce using rule 29 (relative_element_list)


State 46

    2 root: "relative_layout" relative_layout_attributes "t_big" relative_element_list • linear_layout "relative_layout_end"
   28 relative_element_list: relative_element_list • element

    "linear_layout"    shift, and go to state 1
    "relative_layout"  shift, and go to state 26
    "textview"         shift, and go to state 27
    "imageview"        shift, and go to state 28
    "button"           shift, and go to state 29
    "radiogroup"       shift, and go to state 30
    "progressbar"      shift, and go to state 31
    "an_width"         shift, and go to state 5
